# k-tsp-solver

./: .gitignore  README.md  main.py  pyproject.toml  results.csv  setup.py  test.py
analysis/: 2.soa_replication copy.py  2.soa_replication.py  3.changes_experiments.py  4.hyperparameter_tuning__random_search.py  5.hyperparameter_tuning__bayesian_search.py  6.hyperparameter_tuning__grouped_bayesian_search.py  7.soa_replication__changes_analysis.ipynb  8.soa_replication__changes_analysis.ipynb  9.final_result_analysis.ipynb  _soa_analysis.csv  all_changes.py  analysis_hyperparameter_random_search.py  analysis_with_NN_V1.ipynb  hyperparameter_optimization.ipynb  hyperparameter_optimization_general_results.csv  hyperparameter_optimization_pre_general_results.csv  hyperparameter_tuning__bayesian_search.py  hyperparameter_tuning__random_search.py  hyperparameter_tuning__random_search__results.csv  ordered_crossover.py  precompute_nearest_neighbors.py  replacement_operator.py  replacement_operator__ordered_crossover.py  soa_replication.py  variable_mutate_rate.py  variable_mutate_rate__ordered_crossover.py  variable_mutate_rate__replacement_operator.py
experiments/: k_tsp.ipynb  summary_results.csv
k_tsp_solver/: __init__.py  ant_colony_optimization.py  constants.py  enums.py  experiment.py  genetic_algorithm.py  instance.py  model.py  nearest_neighbors.py  nearest_neighbors_v2.py  solution.py  spark_nearest_neighbors.py  utilis.py  utils.py
results/: hyperparameter_tuning__bayesian_search__results.csv  hyperparameter_tuning__random_search__results.csv  soa_processed.csv
(+24348 files in other folders)
