[tool.poetry]
name = "k-tsp-solver"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
networkx = "2.6.3"
tsplib95 = "0.7.1"
pandas = "^2.2.2"
deltalake = "^0.17.3"
duckdb = "^0.10.3"
numpy = "^2.2.2"
plotly = "^6.0.1"
nbformat = "^5.10.4"
ipykernel = "^6.29.5"
scikit-optimize = "^0.10.2"
optuna = "^4.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
